--- a/src/app/pages/posts/posts.component.html
+++ b/src/app/pages/posts/posts.component.html
@@ -1,6 +1,6 @@
 <h1>Posts</h1>
 <ul class="list-group">
-    <li *ngFor="let mensaje of mensajes" class="list-group-item">
+    <li *ngFor="let mensaje of mensajes | async" class="list-group-item">
         <h2>{{mensaje.title}}</h2>
         <p>{{mensaje.body}}</p>
     </li>
